src/ui/snapshots/chatatui__ui__tests__a_tool_that_is_running_says_so.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 70, 12).backend()"
---
"                                                                      "
"        Que dit mon plan ?                                            "
"                                                                      "
"  Je regarde.                                                         "
"                                                                      "
"  outil                                                               "
"  🔧 lire ~/cours/plan.md · ⠋ exécution…                              " Hidden by multi-width symbols: [(3, " ")]
"                                                                      "
"── Message ───────────────────────────────────────────────────────────"
"  Écrivez votre message…                                              "
"                                                                      "
" ◐ Génération… │ Ollama › llama3.2 🔧 │ ctx ≈39         Échap annuler " Hidden by multi-width symbols: [(36, " ")]
