src/ui/snapshots/chatatui__ui__tests__an_open_code_block_while_it_streams.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 70, 12).backend()"
---
"                                                                      "
"        Montre-moi                                                    "
"                                                                      "
"✳ Voici :                                                             "
"                                                                      "
"    rust                                                              "
"      let v = vec![1];▍                                               "
"                                                                      "
"── Message ───────────────────────────────────────────────────────────"
"  Écrivez votre message…                                              "
"                                                                      "
" ◐ Génération… │ Ollama › llama3.2 │ ctx ≈30            Échap annuler "
