src/ui/snapshots/chatatui__ui__tests__cancelled_reply.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 70, 12).backend()"
---
"                                                                      "
"        Raconte une histoire                                          "
"                                                                      "
"  Il était                                                            "
"  [interrompu]                                                        "
"                                                                      "
"                                                                      "
"                                                                      "
"── Message ───────────────────────────────────────────────────────────"
"  Écrivez votre message…                                              "
"                                                                      "
" ● Prêt │ Ollama › llama3.2 │ ctx ≈38            / commandes · Ctrl+P "
