src/ui/snapshots/chatatui__ui__tests__collections_popup_with_last_report.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 80, 24).backend()"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ╭ Collections de documents ────────────────────────────────────────────────╮  "
"  │ rust  il y a 2 h                                                         │  "
"  │   /home/damien/cours/rust                                                │  "
"  │   42 documents · 1 318 passages · bge-m3                                 │  "
"  │                                                                          │  "
"  │ Dernière indexation                                                      │  "
"  │ « rust » indexée : 43 fichiers, 40 ajoutés, 2 modifiés, 1 ignorés, 1 318 │  "
"  │ passages écrits                                                          │  "
"  │   ✖ scans/tp1.pdf — PDF sans texte (scan ?)                              │  "
"  │                                                                          │  "
"  │ Embeddings : Ollama / bge-m3                                             │  "
"  │ /index <dossier> [nom] pour indexer ou mettre à jour (Échap arrête)      │  "
"  ╰──────────────────────────────────────────────────────────── Échap fermer ╯  "
"                                                                                "
"╭ Message ─────────────────────────────────────────────────────────────────────╮"
"│ Écrivez votre message…                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" ● Prêt │ Ollama › llama3.2                 ↑↓ PgUp PgDn défiler · Échap fermer "
