src/ui/snapshots/chatatui__ui__tests__command_palette.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 80, 16).backend()"
---
"     ╭ Commandes ─────────────────────────────────────────────────────────╮     "
"     │ Tapez pour filtrer…                                                │     "
"     │                                                                    │     "
"     │▌ /new                       Nouvelle conversation           Ctrl+N │     "
"     │  /history                   Liste des conversations         Ctrl+L │     "
"     │  /model [nom]               Choisir le modèle (ou le nommer directe│     "
"     │  /context                   Taille du contexte et détail           │     "
"     │  /prompt                    Voir exactement ce qui part au modèle  │     "
"     │  /add <fichier|url>         Joindre au contexte un fichier, une ima│     "
"     │  /clear                     Vider le contexte (l'historique reste a│     "
"     │  /compact                   Résumer l'historique pour libérer le co│     "
"     │  /index <dossier> [nom]     Indexer un dossier (--types pdf,md pour│     "
"╭ Mes│  /collections               Collections de documents indexées      │────╮"
"│ Écr│  /rag <collection>[,…]|off  Répondre à partir d'une collection de d│    │"
"╰────│  /forget <collection>       Supprimer une collection (pas vos fichi│────╯"
" ● Pr╰────────────────────────────────────── Entrée lancer · Échap fermer ╯rmer "
