src/ui/snapshots/chatatui__ui__tests__compare_streaming.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 80, 14).backend()"
---
" ▌ Vous                                                                         "
" ╭ Comparer les réponses ─────────────────────────────────────────────────────╮ "
" │1 · Ollama › llama3.2                 │2 · Ollama › qwen2.5:7b (en cours)   │ "
" │                                      │                                     │ "
" │▌ Assistant                           │▌ Assistant                          │ "
" │Utilisez v.sort().                    │sort_unstable() est plus rapide.▍    │ "
" │                                      │                                     │ "
" │                                      │                                     │ "
" │                                      │                                     │ "
" │                                      │                                     │ "
"╭│                                      │                                     │╮"
"││                                      │                                     ││"
"╰╰─────────────────────────────────── génération… · ↑↓ défiler · Échap fermer ╯╯"
" ◐ Génération… │ Ollama › llama3.2 │ ctx ≈31                       Échap fermer "
