src/ui/snapshots/chatatui__ui__tests__context_popup.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 90, 30).backend()"
---
"                                                                                          "
"        Explique-moi les lifetimes en Rust                                                "
"                                                                                          "
"✳ Tri en Rust                                                                             "
"  ───────────                                                                             "
"       ╭ Contexte ────────────────────────────────────────────────────────────────╮       "
"       │ Ollama › llama3.2  (local : rien ne quitte cette machine)                │       "
"       │                                                                          │       "
"       │ Fenêtre de contexte   4 096 tokens (serveur)                             │       "
"       │ Occupé                3 400 tokens, mesuré par le serveur                │       "
"       │                       ████████████████████████░░░░░░ 83 %                │       "
"       │ Dernière requête      entrée 3 214 · sortie 186 (mesuré)                 │       "
"       │                                                                          │       "
"       │ Répartition (estimation)                                                 │       "
"       │   Prompt système                  23   27 %                              │       "
"       │   Fichiers joints (0)              0    0 %                              │       "
"       │   Historique (2 messages)         61   72 %                              │       "
"       │                                                                          │       "
"       │ Messages les plus longs (estimation)                                     │       "
"       │   #2   Assistant       48  ## Tri en Rust Utilise **`sort_unstable`** si…│       "
"       │   #1   Vous            13  Explique-moi les lifetimes en Rust            │       "
"       │                                                                          │       "
"       │ Contexte presque plein : /compact résume l'historique, /clear repart de z│       "
"       │ /prompt montre exactement ce qui est envoyé au modèle.                   │       "
"       ╰──────────────────────────────────────────────────────────── Échap fermer ╯       "
"                                                                                          "
"── Message ───────────────────────────────────────────────────────────────────────────────"
"  Écrivez votre message…                                                                  "
"                                                                                          "
" ● Prêt │ Ollama › llama3.2 │ ctx 3,4k/4,1k 83 % (/context)                  Échap fermer "
