src/ui/snapshots/chatatui__ui__tests__conversation_with_multiline_input.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 70, 16).backend()"
---
"                                                                      "
"        Bonjour, peux-tu m'aider ?                                    "
"                                                                      "
"✳ Bien sûr ! Que veux-tu savoir ?                                     "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"── Message ───────────────────────────────────────────────────────────"
" Première ligne                                                       "
" Deuxième ligne                                                       "
"                                                                      "
" ● Prêt │ Ollama › llama3.2 │ ctx ≈46            / commandes · Ctrl+P "
