src/ui/snapshots/chatatui__ui__tests__find_bar_highlights_matches.snap
---
source: src/ui/mod.rs
expression: backend.backend()
---
"                                                                      "
"        Comment trier un Vec ?                                        "
"                                                                      "
"✳ Pour trier : v.sort(). Tri stable.                                  "
"                                                                      "
"                                                                      "
"── Chercher dans la conversation ─────────────────────────────────────"
" ⌕ tri▍   2/3                                                         "
"                                                                      "
" ● Prêt │ Ollama › llama3.2 │ ctx ≈46                      ↑↓ · Échap "
